--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,9 @@
                     <a class="nav-link" href="{% url 'dispense' %}">Dispense</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'config' %}">Setup</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
                 {% else %}
