--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -3,6 +3,15 @@
 
 {% block content %}
 <h1 style="text-align: center;">Dashboard</h1>
+{% if messages %}
+<h3 style="text-align: center;">Dispensing In Progress</h3>
+<h4>Alert!</h4>
+<ul class="messages">
+  {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+  {% endfor %}
+</ul>
+{% endif %}
 <h2 style="text-align: center;">Temperature</h2>
 <h3 style="text-align: center;">Current Temperature: {{temp}}°C</h3>
 <h3 style="text-align: center;">Forecast Temperature(Next week): {{fTemp}}°C</h3>
