fixed setup prefilled inputs and cleaned up code

--- a/home/templates/home/dispense.html
+++ b/home/templates/home/dispense.html
@@ -7,7 +7,7 @@
     <!-- <button class="custom-button" id="dispense">Dispense</button> -->
     
     {% if messages %}
-      <h3 style="text-align: center;">Dispensing In Progress</h3>
+      <!-- <h3 style="text-align: center;">Dispensing In Progress</h3> -->
       <h4>Alert!</h4>
       <!-- {%if message != null%}
         <h3>{{message}}</h3>
