Changed title of website on home page

--- a/home/templates/home/frontpage.html
+++ b/home/templates/home/frontpage.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Welcome to My Website</h1>
+  <h1>Welcome to My Dispenser</h1>
   
   <!-- <p>
     <a href="{% url 'signup' %}" class="btn btn-primary">Sign Up</a>
